--- a/Components/Layout/MainLayout.razor.css
+++ b/Components/Layout/MainLayout.razor.css
@@ -44,6 +44,15 @@ main {
     .top-row ::deep a, .top-row ::deep .btn-link {
         margin-left: 0;
     }
+
+    .auth-main {
+        width: 100%;
+    }
+
+    .auth-main article {
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+    }
 }
 
 @media (min-width: 641px) {
@@ -72,6 +81,16 @@ main {
 
     .top-row, article {
         padding-left: 2rem !important;
+        padding-right: 1.5rem !important;
+    }
+
+    .auth-main {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .auth-main article {
+        padding-left: 1.5rem !important;
         padding-right: 1.5rem !important;
     }
 }
