--- a/Components/Pages/Progress.razor
+++ b/Components/Pages/Progress.razor
@@ -3,6 +3,7 @@
 @using MiniLMS.Services
 @using MiniLMS.Data
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.EntityFrameworkCore
 @using System.Security.Claims
 @rendermode InteractiveServer
 @attribute [Authorize]
@@ -10,6 +11,7 @@
 @inject IUserService UserService
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject UserManager<ApplicationUser> UserManager
+@inject IDbContextFactory<ApplicationDbContext> DbContextFactory
 @inject NavigationManager NavigationManager
 
 <PageTitle>Progress Report</PageTitle>
@@ -64,7 +66,9 @@ else
         {
             try
             {
-                var currentUser = await UserManager.GetUserAsync(authState.User);
+                // Use DbContextFactory to avoid concurrency issues
+                using var context = await DbContextFactory.CreateDbContextAsync();
+                var currentUser = await context.Users.FirstOrDefaultAsync(u => u.Id == userId);
                 
                 // Check if user has permission to access this page
                 if (currentUser?.Role == UserRole.Learner)
